# financial-ai

./: .env.example  .gitignore  CHANGES.txt  docker-compose.yml  package-lock.json  render.yaml
.playwright-mcp/: page-2026-04-05T07-15-14-428Z.yml  page-2026-04-05T07-15-23-715Z.yml
backend/: .env.example  config.py  database.py  database_schema.sql  main.py  main_debug.py  requirements.txt  server_log.txt  setup_db.py  test_settings.py
finna/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
finna/backend/alembic/versions/: 20260327_0001_backend_foundation.py
finna/backend/app/: __init__.py  errors.py  main.py
finna/backend/app/agents/: orchestrator.py  specialists.py
finna/backend/app/api/v1/: chat.py  dashboard.py  goals.py  onboarding.py  router.py  transactions.py
finna/backend/app/config/: security.py
finna/backend/app/consensus/: engine.py  models.py
finna/backend/app/middleware/: request_logger.py
finna/backend/app/models/: goal.py  user.py
finna/backend/app/schemas/: analysis.py  auth.py  chat.py  common.py  dashboard.py  goal.py  onboarding.py  transaction.py
finna/backend/app/services/: analysis_service.py  auth_service.py  copilot_service.py  dashboard_service.py  gemini_service.py  goal_service.py  statement_parser.py  transaction_service.py  windows_ocr_bridge.py
finna/backend/app/tools/: financial_metrics.py  goal_simulator.py  investment_planner.py  risk_rules.py
finna/backend/tests/: conftest.py  test_classifier.py  test_consensus_engine.py  test_transactions.py
frontend/: .env.example  package-lock.json  (+1 more)
(+150 files in other folders)
